[package]
name = "nitrogql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json-writer = "0.2.1"
lru = "0.9.0"
glob = "0.3.1"
anyhow = "1.0.69"
pest = "2.5.5"
pest_derive = "2.5.5"
thiserror = "1.0.38"
clap = { version ="4.1.7", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
globmatch = "0.2.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"

[dev-dependencies]
insta = "1.28.0"
