[workspace]
members = [
  "crates/ast",
  "crates/builtins",
  "crates/cli",
  "crates/checker",
  "crates/config-file",
  "crates/error",
  "crates/graphql-loader",
  "crates/introspection",
  "crates/parser",
  "crates/printer",
  "crates/semantics",
  "crates/sourcemap-writer",
  "crates/type-system",
  "crates/utils"
]
