[workspace]
resolver = "2"
members = [
  "crates/ast",
  "crates/async-runtime",
  "crates/builtins",
  "crates/cli",
  "crates/checker",
  "crates/config-file",
  "crates/error",
  "crates/graphql-loader",
  "crates/introspection",
  "crates/parser",
  "crates/plugin",
  "crates/printer",
  "crates/semantics",
  "crates/sourcemap-writer",
  "crates/type-system",
  "crates/utils"
]
