[package]
name = "nitrogql-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
nitrogql-semantics = { path = "../semantics" }
log = "0.4.17"
once_cell = "1.17.1"
thiserror = "1.0.40"

[dev-dependencies]
insta = "1.28.0"
graphql-builtins = { path = "../builtins" }
nitrogql-parser = { path = "../parser" }
sourcemap-writer = { path = "../sourcemap-writer" }
