[package]
name = "nitrogql-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-json-printer = { path = "../json-printer" }
nitrogql-checker = { path = "../checker" }
nitrogql-semantics = { path = "../semantics" }
nitrogql-utils = { path = "../utils" }
sourcemap-writer = { path = "../sourcemap-writer" }
thiserror = "1.0.40"

[dev-dependencies]
graphql-builtins = { path = "../builtins" }
nitrogql-extension-resolver = { path = "../extension-resolver" }
nitrogql-parser = { path = "../parser" }
insta = "1.28.0"
