[package]
name = "nitrogql-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
nitrogql-semantics = { path = "../semantics" }
graphql-type-system = { path = "../type-system" }
log = "0.4.17"
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.28.0"
graphql-builtins = { path = "../builtins" }
nitrogql-parser = { path = "../parser" }
sourcemap-writer = { path = "../sourcemap-writer" }
