[package]
name = "nitrogql-checker"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
nitrogql-semantics = { path = "../semantics" }
graphql-type-system = { path = "../type-system" }
log = "0.4.33"
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.48.0"
graphql-builtins = { path = "../builtins" }
nitrogql-parser = { path = "../parser" }
sourcemap-writer = { path = "../sourcemap-writer" }
