[package]
name = "nitrogql-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-checker = { path = "../checker" }
nitrogql-config-file = { path = "../config-file", features = ["fs"] }
nitrogql-error = { path = "../error" }
nitrogql-introspection = { path = "../introspection" }
nitrogql-parser = { path = "../parser" }
nitrogql-printer = { path = "../printer" }
nitrogql-semantics = { path = "../semantics" }
nitrogql-utils = { path = "../utils" }
sourcemap-writer = { path = "../sourcemap-writer" }
graphql-builtins = { path = "../builtins" }
graphql-type-system = { path = "../type-system" }
json-writer = "0.2.1"
lru = "0.9.0"
glob = "0.3.1"
anyhow = "1.0.69"
pest = "2.5.5"
pest_derive = "2.5.5"
thiserror = "1.0.38"
clap = { version ="4.1.7", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
globmatch = "0.2.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
colored = "2.0.0"
once_cell = "1.17.1"
serde = "1.0.156"
serde_yaml = "0.9.19"
itertools = "0.10.5"

[dev-dependencies]
insta = "1.28.0"
