[package]
name = "nitrogql-cli"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-async-runtime = { path = "../async-runtime" }
nitrogql-checker = { path = "../checker" }
nitrogql-config-file = { path = "../config-file", features = ["fs", "execute_js"] }
nitrogql-error = { path = "../error" }
nitrogql-introspection = { path = "../introspection" }
nitrogql-parser = { path = "../parser" }
nitrogql-plugin = { path = "../plugin" }
nitrogql-printer = { path = "../printer" }
nitrogql-semantics = { path = "../semantics" }
nitrogql-utils = { path = "../utils" }
sourcemap-writer = { path = "../sourcemap-writer" }
graphql-builtins = { path = "../builtins" }
graphql-type-system = { path = "../type-system" }
json-writer = "0.4.0"
lru = "0.13.0"
glob = "0.3.3"
anyhow = "1.0.102"
pest = "2.8.6"
pest_derive = "2.8.6"
thiserror = "2.0.18"
clap = { version ="4.6.1", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
globmatch = "0.3.1"
log = "0.4.33"
colored = "3.1.1"
once_cell = "1.21.4"
serde = "1.0.228"
serde_yaml = "0.9.34"
itertools = "0.14.0"
simple_logger = "5.2.0"
futures = "0.3.32"

[dev-dependencies]
insta = "1.48.0"
