[package]
name = "nitrogql-config-file"
version = "0.1.0"
edition = "2021"

[features]
# Searches and loads config from file system.
fs = ["execute_js"]
# Executes JS file.
execute_js = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
log = "0.4.17"
