[package]
name = "nitrogql-config-file"
version = "0.1.0"
edition = "2024"

[features]
# Searches and loads config from file system.
fs = ["execute_js"]
# Executes JS file.
execute_js = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-async-runtime = { path = "../async-runtime" }
once_cell = "1.17.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.21"
thiserror = "2.0.12"
log = "0.4.17"