[package]
name = "nitrogql-config-file"
version = "0.1.0"
edition = "2024"

[features]
# Searches and loads config from file system.
fs = ["execute_js"]
# Executes JS file.
execute_js = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-async-runtime = { path = "../async-runtime" }
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
log = "0.4.33"
