[package]
name = "graphql-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
nitrogql-ast = { path = "../ast" }
nitrogql-config-file = { path = "../config-file" }
nitrogql-parser = { path = "../parser" }
nitrogql-printer = { path = "../printer" }
nitrogql-utils = { path = "../utils" }
pretty_env_logger = "0.4.0"
sourcemap-writer = { path = "../sourcemap-writer" }
