[package]
name = "graphql-loader"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
log = "0.4.33"
nitrogql-ast = { path = "../ast" }
nitrogql-config-file = { path = "../config-file" }
nitrogql-error = { path = "../error" }
nitrogql-parser = { path = "../parser" }
nitrogql-semantics = { path = "../semantics" }
nitrogql-printer = { path = "../printer" }
nitrogql-utils = { path = "../utils" }
sourcemap-writer = { path = "../sourcemap-writer" }
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.48.0"
