[package]
name = "nitrogql-introspection"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-type-system = { path = "../type-system" }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.29.0"
nitrogql-printer = { path = "../printer" }
sourcemap-writer = { path = "../sourcemap-writer" }
