[package]
name = "nitrogql-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
pest = "2.5.5"
pest_derive = "2.5.5"
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.28.0"
nitrogql-printer = { path = "../printer" }
sourcemap-writer = { path = "../sourcemap-writer" }
