[package]
name = "nitrogql-parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
pest = "2.8.6"
pest_derive = "2.8.6"
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.48.0"
nitrogql-printer = { path = "../printer" }
sourcemap-writer = { path = "../sourcemap-writer" }
