[package]
name = "nitrogql-plugin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
graphql-builtins = { path = "../builtins" }
nitrogql-checker = { path = "../checker" }
nitrogql-config-file = { path = "../config-file" }
nitrogql-error = { path = "../error" }
nitrogql-parser = { path = "../parser" }
nitrogql-printer = { path = "../printer" }
nitrogql-semantics = { path = "../semantics" }
graphql-type-system = { path = "../type-system" }
serde_yaml = "0.9.34"
sourcemap-writer = { path = "../sourcemap-writer" }
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.48.0"
