[package]
name = "nitrogql-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-type-system = { path = "../type-system" }
itertools = "0.10.5"
json-writer = "0.2.1"
nitrogql-ast = { path = "../ast" }
nitrogql-checker = { path = "../checker" }
nitrogql-semantics = { path = "../semantics" }
nitrogql-utils = { path = "../utils" }
sourcemap-writer = { path = "../sourcemap-writer" }
thiserror = "1.0.40"

[dev-dependencies]
graphql-builtins = { path = "../builtins" }
nitrogql-parser = { path = "../parser" }
insta = "1.28.0"
