[package]
name = "nitrogql-printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-type-system = { path = "../type-system" }
itertools = "0.14.0"
json-writer = "0.4.0"
nitrogql-ast = { path = "../ast" }
nitrogql-checker = { path = "../checker" }
nitrogql-config-file = { path = "../config-file" }
nitrogql-semantics = { path = "../semantics" }
nitrogql-utils = { path = "../utils" }
sourcemap-writer = { path = "../sourcemap-writer" }
thiserror = "2.0.12"

[dev-dependencies]
graphql-builtins = { path = "../builtins" }
nitrogql-parser = { path = "../parser" }
insta = "1.28.0"
