[package]
name = "nitrogql-semantics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
nitrogql-utils = { path = "../utils" }
graphql-type-system = { path = "../type-system" }
indexmap = "2.0.0"
thiserror = "1.0.40"

[dev-dependencies]
insta = "1.28.0"
nitrogql-printer = { path = "../printer" }
nitrogql-parser = { path = "../parser" }
nitrogql-introspection = { path = "../introspection" }
sourcemap-writer = { path = "../sourcemap-writer" }
