[package]
name = "nitrogql-semantics"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nitrogql-ast = { path = "../ast" }
nitrogql-error = { path = "../error" }
nitrogql-utils = { path = "../utils" }
graphql-type-system = { path = "../type-system" }
indexmap = "2.14.0"
log = "0.4.33"
thiserror = "2.0.18"

[dev-dependencies]
insta = "1.48.0"
nitrogql-printer = { path = "../printer" }
nitrogql-parser = { path = "../parser" }
nitrogql-introspection = { path = "../introspection" }
sourcemap-writer = { path = "../sourcemap-writer" }
